--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "bs4>=0.0.2",
+    "duckduckgo-search>=8.1.1",
     "faiss-cpu==1.10",
     "jupyter>=1.1.1",
     "langchain>=0.3.25",
@@ -18,6 +20,7 @@ dependencies = [
     "pypdf2>=3.0.1",
     "python-dotenv>=1.1.0",
     "ragas>=0.2.15",
+    "requests>=2.32.3",
     "torch>=2.7.0",
     "torchaudio>=2.7.0",
     "torchvision>=0.22.0",
