--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "bs4>=0.0.2",
-    "duckduckgo-search>=8.1.1",
+    "ddgs>=9.4.3",
     "faiss-cpu==1.10",
     "jupyter>=1.1.1",
     "langchain>=0.3.25",
